Avance con comment y category para se usados a report, se hizo mapper de category y comment y se usan en report. Se modificaron pequeños atributos en la especificacion se hizo los services de las entidades mencionadas e igual se inicializo sus implementaciones. El report le falta poco pero aun no se han hechos pruebas.
