# src/main/java/co/uniquindio/dtos/response/CategoryResponse.java
@@ -2,10 +2,13 @@ package co.uniquindio.dtos.response;
 
 import lombok.*;
 
+import java.time.LocalDateTime;
+
 public record CategoryResponse(
         String name,
         String description,
-        String id
+        String id,
+        LocalDateTime creationDate
 ) {
 
 }
