# src/main/java/co/uniquindio/dtos/response/CommentResponse.java
@@ -6,8 +6,10 @@ import co.uniquindio.enums.CommentStatus;
 import lombok.*;
 
 public record CommentResponse(
+        String id,
         String userName,
         String userId,
+        String reportId,
         String comment,
         CommentStatus status,
         LocalDateTime date
